Fix dontIgnore Javadoc and replace test with production code exercise via reflection
Co-authored-by: sloppylopez <6529911+sloppylopez@users.noreply.github.com>